2008-06-19  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/net.m4: AC_SUBST port ranges; update comments

2008-06-19  Satya Ganga <gsat@zmanda.com>
	* example/template.d/amanda-single-tape.conf.in
	  example/template.d/advanced.conf.in: update displayunit to "g" and
	  remove chg-manual for single tape configurations.

2008-06-19  Ian Turner <ian@zmanda.com>
	* device-src/rait-device.c (rait_device_start): Check for consistent
	  volume label on all child devices, fail with
	  DEVICE_STATUS_DEVICE_ERROR otherwise.
	* installcheck/Amanda_Device.pl: Test for foregoing.

2008-06-19  Paddy Sreenivasan <paddy@zmanda.com>
	* device-src/s3.h: use "https://ls.amazonaws.com/" as STS endpoint

2008-06-19  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Makefile.am: remove test_utils from SCRIPTS_PERL
	* config/automake/scripts.am: explain why

2008-06-18  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-manual.sh: Make it interruptible.

2008-06-18  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Remove check for amandates file.

2008-06-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amanda.h: Fix skip_quoted_string for "\\".
	* common-src/file.c: Fix debug_agets for "\\".

2008-06-18  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Report size of PART taped on 'dump to tape'.

2008-06-18  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendsize.c: Report error from application to server.
	* application-src/amgtar.c: Report exit status of tar.

2008-06-16  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Xfer.swg xfer-src/Makefile.am xfer-src/xfer-element.h
	  xfer-src/dest-device.c xfer-src/source-device.c: new elements
	  Amanda::Xfer:{Dest,Source}::Device
	* perl/Amanda/Xfer.swg: POD fix for Amanda::Xfer:Filter::Xor
	* installcheck/Amanda_Xfer.pl: tests for new elements

2008-06-16  Dustin J. Mitchell <dustin@zmanda.com>